--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ section{
 
 header{
 
-    font-family: 'Playfair Display', serif;
+    font-family: 'Poiret One', cursive;
     color: darkslategrey;
     font-size: 12PT;
 
