--- a/style.css
+++ b/style.css
@@ -70,6 +70,10 @@ header{
     font-family: 'Poiret One', cursive;
     color: darkslategrey;
     font-size: 12PT;
+    margin-left: 0;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
 
 }
 
