--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ form {
     -khtml-border-radius: 10px; /* KHTML */
     border-radius: 10px; /* CSS3 */
     margin-bottom: 5%;
+    margin-left: 2%;
 
 }
 
