--- a/assets/style.css
+++ b/assets/style.css
@@ -80,23 +80,14 @@ ul {
     padding: 0;
 }
 
-.moveright{
-
-    text-align: right;
-    color: darkslategrey;
-}
-
-.table1{
-
-    float: left;
-    background-color: darkslategrey;
-    padding: 30px;
-    font-family: 'Open Sans', sans-serif;
+.inputform
+{
     -moz-border-radius:10px; /* Firefox */
     -webkit-border-radius: 10px; /* Safari, Chrome */
     -khtml-border-radius: 10px; /* KHTML */
     border-radius: 10px; /* CSS3 */
-    margin-bottom: 5%;
-    margin-left: 2%;
+    padding: 5px;
+    margin-bottom: 10px;
 
 }
+
