--- a/assets/style.css
+++ b/assets/style.css
@@ -32,6 +32,13 @@ main {
 
 }
 
+#form{
+
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+}
+
 
 .banner{
     background-color: slategrey;
@@ -88,6 +95,86 @@ ul {
     border-radius: 10px; /* CSS3 */
     padding: 5px;
     margin-bottom: 10px;
+
+}
+
+.small{
+
+    font-family: 'Open Sans', sans-serif;
+    font-size: 8px;
+    color: white;
+}
+
+.resultdisplay{
+    float: left;
+
+    border-style: solid;
+    border-color: darkslategrey;
+}
+
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid darkslategrey;
+    border-bottom: 16px solid darkslategrey;
+    width: 50px;
+    height: 50px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+#submit {
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+}
+
+A:LINK{
+
+    COLOR: gold;
+}
+
+A:HOVER{
+
+    COLOR: red;
+}
+
+.foot{
+    float: right;
+    text-align: right;
+    font-family: 'Open Sans', sans-serif;
+    vertical-align: bottom;
+    font-size: 10PT;
+}
+
+input.submit {
+    width: 6em;  height: 3em;
+
+
+}
+
+.table1{
+
+
+    background-color: darkslategrey;
+    padding: 30px;
+    font-family: 'Open Sans', sans-serif;
+    -moz-border-radius:10px; /* Firefox */
+    -webkit-border-radius: 10px; /* Safari, Chrome */
+    -khtml-border-radius: 10px; /* KHTML */
+    border-radius: 10px; /* CSS3 */
+    margin-bottom: 5%;
+    margin-left: 2%;
 
 }
 
