--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ form {
 .table1{
 
     float: left;
-    background-color: #75B12C;
+    background-color: #D1F2A9;
     padding: 30px;
     font-family: 'Open Sans', sans-serif;
     -moz-border-radius:10px; /* Firefox */
