--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@
    height: 50px;
 }
 
-
 .table2{
 
     float: right;
@@ -37,9 +36,6 @@
     border-radius: 10px; /* CSS3 */
     padding: 5px;
     margin-bottom: 10px;
-
-
-
 
 }
 
@@ -54,12 +50,6 @@ body{
     border-bottom: 1px solid darkslategrey;
 }
 
-.tr2{
-
-
-}
-
-
 .nav{
 
     font-family: 'Poiret One', cursive;
@@ -72,10 +62,6 @@ body{
 
 }
 
-section{
-
-
-}
 
 header{
 
@@ -86,11 +72,6 @@ header{
     margin-top: 0;
     margin-right: 0;
     margin-bottom: 0;
-
-}
-
-head{
-
 
 }
 
@@ -141,10 +122,21 @@ form {
     border-radius: 10px; /* CSS3 */
     margin-bottom: 5%;
     margin-left: 2%;
-
-
 }
 
+.table3{
+
+    float: left;
+    background-color: lightgray;
+    padding: 30px;
+    font-family: 'Open Sans', sans-serif;
+    -moz-border-radius:10px; /* Firefox */
+    -webkit-border-radius: 10px; /* Safari, Chrome */
+    -khtml-border-radius: 10px; /* KHTML */
+    border-radius: 10px; /* CSS3 */
+    margin-bottom: 5%;
+    margin-left: 2%;
+}
 
 
 .foot{
@@ -157,8 +149,6 @@ form {
 
 input.submit {
     width: 6em;  height: 3em;
-
-
 }
 
 ul {
@@ -196,21 +186,6 @@ A:HOVER{
     COLOR: red;
 }
 
-h1{
-
-
-
-}
-
-h2{
-
-
-}
-
-h3{
-
-
-}
 
 h4{
 
@@ -223,10 +198,6 @@ h4{
     border-radius: 50px;
 }
 
-nav{
-
-
-}
 
 .small{
 
@@ -237,7 +208,6 @@ nav{
 
 .resultdisplay{
     float: left;
-
     border-style: solid;
     border-color: darkslategrey;
 }
