--- a/style.css
+++ b/style.css
@@ -232,3 +232,14 @@ h4{
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+.container1
+{
+    position: relative;
+    width:1000px;
+    margin:0 auto 0 auto;
+    padding:5px;
+    border:1px solid #cccccc;
+    background:#ffffff;
+    height:400px;
+}
