--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@
     background-color: darkslategrey;
     font-family: 'Open Sans', sans-serif;
     font-size: 10PT;
-    padding: 10px;
-    vertical-align: top;
+    padding: 5px;
+    <!--vertical-align: top;-->
     color: white;
     margin-top: 0;
     margin-left: 0;
-    text-align: right;
+    <!--text-align: right;-->
     height: 70px;
 
 }
