--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 .right {
 
-    width: 100%;
+    width: 99%;
     background-color: darkslategrey;
     font-family: 'Open Sans', sans-serif;
     font-size: 10PT;
@@ -16,7 +16,7 @@
     color: white;
     margin-top: 0;
     margin-left: 0;
-    <!--text-align: right;-->
+    text-align: right;
     height: 70px;
 
 }
