--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     font-family: 'Open Sans', sans-serif;
     font-size: 10PT;
     padding: 5px;
-    <!--vertical-align: top;-->
+    vertical-align: top;
     color: white;
     margin-top: 0;
     margin-left: 0;
