--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@
 
 .right2{
 
-    font-family: 'Open Sans', sans-serif;
-    font-size: 15px;
+    font-family: 'Poiret One', cursive;
+    font-size: 20px;
 }
 
 body{
