--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
 
     float: right;
     width: 55%;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Poiret One', cursive;
     -moz-border-radius:10px; /* Firefox */
     -webkit-border-radius: 10px; /* Safari, Chrome */
     -khtml-border-radius: 10px; /* KHTML */
