--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ ul {
 
     text-align: right;
     color: darkslategrey;
+    margin-right: 0;
 }
 
 li{
@@ -201,7 +202,7 @@ A:HOVER{
 }
 
 #nav li:before {
-    content: "|";
+    content: "";
     padding: 5px;
 }
 
