--- a/style.css
+++ b/style.css
@@ -164,7 +164,11 @@ input.submit {
     width: 6em;  height: 3em;
 }
 
-
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0px;
+}
 
 .moveright{
 
@@ -198,15 +202,20 @@ A:HOVER{
     COLOR: white;
 }
 
+#nav{
+
+    margin-top: 0;
+}
+
 #nav li:before {
     content: "";
-    margin: 0;
+    margin-top: 0;
 
 }
 
 #nav li:first-child:after {
     content: none;
-    margin: 0;
+    margin-top: 0;
 }
 
 h2{
