--- a/style.css
+++ b/style.css
@@ -174,8 +174,8 @@ ul {
 
     text-align: right;
     color: darkslategrey;
-    margin-right: 0;
-    padding: 5px;
+    margin-top: 0;
+    padding: 0px;
 }
 
 li{
