--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ input.submit {
 ul {
     list-style-type: none;
     margin: 0;
+    padding: 10px;
 
 }
 
@@ -177,7 +178,7 @@ ul {
     margin-top: 0;
     margin-right: 0;
     margin-left: 0;
-    padding: 10px;
+
 
 
 }
@@ -194,7 +195,7 @@ li{
 li a{
 
     display: inline-block;
-    padding: 0 10px 10px 10px;
+    padding: 0px 10px 10px 10px;
     text-decoration: none;
 
 }
