--- a/style.css
+++ b/style.css
@@ -67,9 +67,10 @@ body{
 
 #navbar{
 
-    max-width: 1200px;
+    width: 100%;
     border: 1px solid black;
     height: 100px;
+
 }
 
 .nav{
@@ -79,7 +80,6 @@ body{
     font-size: 14PT;
     float: right;
     text-align: right;
-    max-width: 1200px;
     border: 3px solid black;
 
 }
