--- a/style.css
+++ b/style.css
@@ -272,19 +272,29 @@ h4{
 
 #container2{
 
+    max-width: 1200px;
+    height: 100px;
+    border: 3px solid black;
 
 }
 
 #navigation2{
+    max-width: 1200px;
+    height: 100px;
+    border: 3px solid black;
 
 }
 
 #content2{
-
+    max-width: 1200px;
+    height: 100px;
+    border: 3px solid black;
 
 }
 
 #foot2{
-
+    max-width: 1200px;
+    height: 100px;
+    border: 3px solid black;
 
 }
