--- a/style.css
+++ b/style.css
@@ -261,14 +261,18 @@ h4{
     100% { transform: rotate(360deg); }
 }
 
+
+
+
+
+
+
+
+
 #container{
 
     max-width: 1200px;
 }
-
-
-
-
 
 #banner2{
 
@@ -286,14 +290,13 @@ h4{
 }
 
 body {
-    background-color: cornflowerblue;
+    background-color: white;
 }
 main {
-    max-width: 960px;
+    max-width: 1200px;
     margin-right: auto;
     margin-left: auto;
-    height: 500px;
-    background-color: aliceblue;
+    background-color: white;
 }
 
 
