--- a/style.css
+++ b/style.css
@@ -76,7 +76,23 @@ body{
 
 }
 
+.right3{
 
+
+    width: 99%;
+    background-color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 12PT;
+    padding: 10px;
+    vertical-align: top;
+    color: darkslategrey;
+    margin-top: 0;
+    margin-left: 0;
+    text-align: right;
+    height: 30px;
+    border: 1px solid black;
+
+}
 
 header{
 
