--- a/style.css
+++ b/style.css
@@ -291,17 +291,24 @@ h4{
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    border: solid black;
 }
 
 #banner2{
 
     max-width: 1200px;
+    background-color: aqua;
+    height: 200px;
+    border: solid black;
 
 
 }
 
 #navigation2{
     max-width: 1200px;
+    background-color: beige;
+    height: 200px;
+    border: solid black;
 
 
 }
@@ -309,20 +316,20 @@ h4{
 
 main {
     max-width: 99%;
-
-    background-color: white;
+    border: solid black;
+    background-color: aliceblue;
 }
 
 
 #content2{
     max-width: 1200px;
-
+    border: solid black;
 
 }
 
 #foot2{
     max-width: 1200px;
-
+    border: solid black;
 
 
 }
