--- a/style.css
+++ b/style.css
@@ -199,11 +199,12 @@ li{
 }
 
 li a{
+
     float: right;
     font-family: 'Roboto', sans-serif;
     display: inline-block;
     padding: 10px;
-    text-decoration: none;
+
 
 
 }
@@ -282,7 +283,7 @@ h4{
 
 }
 
-#banner2{
+#banner{
 
     max-width: 1500px;
     background-color: gray;
@@ -292,7 +293,7 @@ h4{
 
 }
 
-#navigation2{
+#navigation{
     max-width: 1500px;
     background-color: lightgray;
     height: 40px;
