--- a/style.css
+++ b/style.css
@@ -128,8 +128,8 @@ form {
 
 .table1{
 
-    float: left;
-    background-color: darkslategrey;
+
+    background-color: whitesmoke;
     padding: 30px;
     font-family: 'Open Sans', sans-serif;
     -moz-border-radius:10px; /* Firefox */
