--- a/style.css
+++ b/style.css
@@ -25,36 +25,9 @@
 
 
 
-.nav{
-
-
-    color: darkslategrey;
-    font-size: 14PT;
-    text-align: right;
-
-
-}
-
-.right3{
 
 
 
-
-
-
-}
-
-header{
-
-
-    color: darkslategrey;
-    font-size: 12PT;
-    margin-left: 0;
-    margin-top: 0;
-    margin-right: 0;
-    margin-bottom: 0;
-
-}
 
 form {
 
@@ -83,19 +56,9 @@ form {
     border-radius: 50px;
 }
 
-.fh3{
-
-    font-family: 'Open Sans', sans-serif;
-    text-align: left;
-
-}
-
-
 .table1{
-
-
     background-color: whitesmoke;
-    padding: 30px;
+    padding: 20px;
     font-family: 'Open Sans', sans-serif;
     -moz-border-radius:10px; /* Firefox */
     -webkit-border-radius: 10px; /* Safari, Chrome */
@@ -104,24 +67,6 @@ form {
     margin-bottom: 5%;
     margin-left: 2%;
 }
-
-.table3{
-
-    float: left;
-    background-color: lightgray;
-    padding: 30px;
-    font-family: 'Open Sans', sans-serif;
-    -moz-border-radius:10px; /* Firefox */
-    -webkit-border-radius: 10px; /* Safari, Chrome */
-    -khtml-border-radius: 10px; /* KHTML */
-    border-radius: 10px; /* CSS3 */
-    margin-bottom: 5%;
-    margin-left: 2%;
-}
-
-
-
-
 
 input.submit {
     width: 6em;  height: 3em;
@@ -130,27 +75,7 @@ input.submit {
 ul {
     list-style-type: none;
     margin: 0;
-
-
 }
-
-
-
-
-
-
-
-h2{
-
-    font-family: 'Open Sans', sans-serif;
-    font-size: 20px;
-}
-
-h4{
-    color: white;
-}
-
-
 
 #submit {
     -webkit-border-radius: 50px;
@@ -158,8 +83,7 @@ h4{
     border-radius: 50px;
 }
 
-
-.small{
+.smallfont{
 
     font-family: 'Open Sans', sans-serif;
     font-size: 9px;
