--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ form {
 }
 
 .table1{
-    background-color: whitesmoke;
+    background-color: chartreuse;
     padding: 20px;
     font-family: 'Open Sans', sans-serif;
     -moz-border-radius:10px; /* Firefox */
