--- a/style.css
+++ b/style.css
@@ -56,7 +56,16 @@ form {
     border-radius: 50px;
 }
 
-
+.table1{
+    background-color: forestgreen;
+    font-family: 'Open Sans', sans-serif;
+    -moz-border-radius:10px; /* Firefox */
+    -webkit-border-radius: 10px; /* Safari, Chrome */
+    -khtml-border-radius: 10px; /* KHTML */
+    border-radius: 10px; /* CSS3 */
+    margin-bottom: 5%;
+    margin-left: 2%;
+}
 
 input.submit {
     width: 6em;  height: 3em;
