--- a/style.css
+++ b/style.css
@@ -1,34 +1,4 @@
 
-
-
-
-
-
-.table2{
-
-    float: right;
-    width: 55%;
-    font-family: 'Roboto', sans-serif;
-    -moz-border-radius:10px; /* Firefox */
-    -webkit-border-radius: 10px; /* Safari, Chrome */
-    -khtml-border-radius: 10px; /* KHTML */
-    border-radius: 10px; /* CSS3 */
-    padding: 5px;
-    margin-bottom: 10px;
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
 form {
 
     color: #ffffff;
@@ -57,7 +27,7 @@ form {
 }
 
 .table1{
-    background-color: forestgreen;
+    background-color: lightgreen;
     font-family: 'Open Sans', sans-serif;
     -moz-border-radius:10px; /* Firefox */
     -webkit-border-radius: 10px; /* Safari, Chrome */
