--- a/style.css
+++ b/style.css
@@ -101,9 +101,9 @@ ul {
     height: 40px;
 }
 
-#content2{
+#content{
     max-width: 1500px;
-    background-color: white;
+    background-color: azure;
     height: 500px;
 }
 
