--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ ul {
 #banner{
 
     max-width: 1500px;
-    background-color: gainsboro;
+    background-color: floralwhite;
     height: 70px;
 }
 
