--- a/style.css
+++ b/style.css
@@ -127,11 +127,12 @@ li a{
     display: inline-block;
     padding: 10px;
     text-decoration: none;
+    color: darkslategrey;
 }
 
 li a:HOVER{
     background-color: whitesmoke;
-    COLOR: black;
+    COLOR: seagreen;
     padding: 10px;
 }
 
