--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ ul {
     -webkit-border-radius: 50px;
     -moz-border-radius: 50px;
     border-radius: 50px;
+    float: right;
 }
 
 .smallfont{
