--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ form {
 }
 
 .table1{
-    background-color: yellowgreen;
+    background-image: url("assets/bbsky.jpg");
     padding: 10px;
     font-family: 'Open Sans', sans-serif;
     -moz-border-radius:10px; /* Firefox */
