--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ form {
 }
 
 .table1{
-    max-width: 1500px;
+    width: 100%;
     background-image: url("assets/bbsky.jpg");
     padding: 10px;
     font-family: 'Open Sans', sans-serif;
