--- a/style.css
+++ b/style.css
@@ -16,8 +16,6 @@ form {
 }
 
 .table1{
-    width: 100%;
-
     padding: 10px;
     font-family: 'Open Sans', sans-serif;
     -moz-border-radius:10px; /* Firefox */
@@ -25,8 +23,10 @@ form {
     -khtml-border-radius: 10px; /* KHTML */
     border-radius: 10px; /* CSS3 */
     margin-bottom: 5%;
-    margin-left: 2%;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 12px;
+
 }
 
 input.submit {
