--- a/style.css
+++ b/style.css
@@ -29,6 +29,20 @@ form {
 
 }
 
+
+.tablesearch {
+    padding: 100px;
+    font-family: 'Open Sans', sans-serif;
+    -moz-border-radius: 10px; /* Firefox */
+    -webkit-border-radius: 10px; /* Safari, Chrome */
+    -khtml-border-radius: 10px; /* KHTML */
+    border-radius: 10px; /* CSS3 */
+    margin-bottom: 5%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 15px;
+}
+
 input.submit {
     width: 5em;  height: 2em;
 }
