--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ ul {
 
 #content{
     max-width: 1500px;
-    background-image: url("assets/bbsky.jpg");
+    background-image: url("assets/banner2.jpg");
 
 }
 
