--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@ form {
 
     color: white;
     font-family: 'Open Sans', sans-serif;
-    font-size: 15PT;
+    font-size: 12PT;
+}
+
+h1{
+
+    font-size: 20px;
 }
 
 .inputform
@@ -147,6 +152,7 @@ li a{
 
 li a:HOVER{
     background-color: lightgray;
+    color: white;
     padding: 10px;
 }
 
