--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ h4{
 #banner{
 
     max-width: 1500px;
-    background-color: darkgrey;
+    background-color: darkslateblue;
     font-family: 'Roboto', sans-serif;
     height: 80px;
     color: white;
