--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ button{
 #foot{
 
     max-width: 1500px;
-    background-color: darkslategrey;
+    background-color: lightgray;
     text-align: left;
     font-family: 'Roboto', sans-serif;
     font-size: 10PT;
