--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h4{
     background-color: snow;
     font-family: 'Roboto', sans-serif;
     height: 80px;
-    color: white;
+    color: darkslategrey;
 
 }
 
@@ -132,7 +132,7 @@ button{
 
 #content2{
 
-    background-color: white;
+    background-color: snow;
 }
 
 .floatleft {
@@ -150,7 +150,7 @@ button{
     text-align: left;
     font-family: 'Roboto', sans-serif;
     font-size: 10PT;
-    color: white;
+    color: darkslategrey;
 }
 
 li a{
