--- a/style.css
+++ b/style.css
@@ -22,14 +22,16 @@ h1{
 }
 
 .table1{
-    background-color: lightgray;
+    background-color: snow;
     padding: 10px;
     -moz-border-radius:10px; /* Firefox */
     -webkit-border-radius: 10px; /* Safari, Chrome */
     -khtml-border-radius: 10px; /* KHTML */
     border-radius: 10px; /* CSS3 */
     margin-bottom: 5%;
-    color: white;
+    color: snow;
+    margin-top: 20px;
+    margin-left: 20px;
 
 
 
