--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1{
     -khtml-border-radius: 10px; /* KHTML */
     border-radius: 10px; /* CSS3 */
     margin-bottom: 5%;
-    color: snow;
+    color: darkslategrey;
 
 
 
