--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ h1{
 .table1{
 
     padding: 25px;
+    background-color: blanchedalmond;
     -moz-border-radius:10px; /* Firefox */
     -webkit-border-radius: 10px; /* Safari, Chrome */
     -khtml-border-radius: 10px; /* KHTML */
