--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h1{
 .table1{
 
     padding: 25px;
-    background-color: #2f4f4f;
+    background-color: #dadada;
     -moz-border-radius:10px; /* Firefox */
     -webkit-border-radius: 10px; /* Safari, Chrome */
     -khtml-border-radius: 10px; /* KHTML */
