--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ h4{
 
 #navigation{
     max-width: 1500px;
-    background-color: lightgray;
+    background-color: #f8f8ff;
     height: 40px;
 }
 
