--- a/style.css
+++ b/style.css
@@ -31,11 +31,8 @@ h1{
     border-radius: 10px; /* CSS3 */
     margin-bottom: 5%;
     color: darkslategrey;
-
-
-
-
-}
+    margin: 5%;
+    }
 
 
 .tablesearch {
