--- a/style.css
+++ b/style.css
@@ -29,11 +29,13 @@ h1{
     -webkit-border-radius: 10px; /* Safari, Chrome */
     -khtml-border-radius: 10px; /* KHTML */
     border-radius: 10px; /* CSS3 */
-    margin-bottom: 5%;
     color: darkslategrey;
     margin: 5%;
     }
 
+.table2{
+    color: white;
+}
 
 .tablesearch {
     padding: 80px;
@@ -133,6 +135,11 @@ button{
 #content2{
 
     background-color: snow;
+}
+
+#content3{
+    
+    background-image: url("assets/wallpaper.jpg");
 }
 
 .floatleft {
