--- a/style.css
+++ b/style.css
@@ -73,6 +73,11 @@ h4{
     font-size: 12px;
 }
 
+h2{
+    font-family: 'Roboto', sans-serif;
+    color: white;
+}
+
 .resultdisplay{
     float: left;
     border-style: solid;
