--- a/style.css
+++ b/style.css
@@ -73,6 +73,12 @@ h4{
     font-size: 12px;
 }
 
+#welcome{
+
+    text-align: right;
+
+}
+
 h2{
     font-family: 'Roboto', sans-serif;
     color: white;
