--- a/style.css
+++ b/style.css
@@ -73,12 +73,6 @@ h4{
     font-size: 12px;
 }
 
-#welcome{
-
-    text-align: right;
-
-}
-
 h2{
     font-family: 'Roboto', sans-serif;
     color: white;
@@ -200,3 +194,7 @@ body{
 }
 
 
+#content4{
+
+    float: right;
+}
