--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@ h1{
     color: white;
 }
 
+.table4{
+
+    float: right;
+}
+
 .tablesearch {
     padding: 80px;
     -moz-border-radius: 10px; /* Firefox */
