--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1{
 }
 
 .table1{
-
+    border: 1px solid darkslategrey;
     padding: 25px;
     background-color: #f8f8ff;
     -moz-border-radius:10px; /* Firefox */
