--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ h2{
 #banner{
 
     max-width: 1500px;
-    background-color: #FFFFE0;
+    background-color: #f8f8ff;
     font-family: 'Roboto', sans-serif;
     height: 80px;
     color: darkslategrey;
