--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ h2{
 
 #navigation{
     max-width: 1500px;
-    background-color: #dadada;
+    background-color: #00008B;
     height: 40px;
 }
 
