--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ h2{
 #banner{
 
     max-width: 1500px;
-    background-color: #f8f8ff;
+    background-color: snow;
     font-family: 'Roboto', sans-serif;
     height: 80px;
     color: darkslategrey;
@@ -174,7 +174,7 @@ li a{
     display: inline-block;
     padding: 10px;
     text-decoration: none;
-    color: darkslategrey;
+    color: white;
 }
 
 li a:HOVER{
