--- a/style.css
+++ b/style.css
@@ -166,7 +166,8 @@ button{
     font-family: 'Roboto', sans-serif;
     font-size: 10PT;
     color: white;
-    height: 50px;
+    height: 200px;
+    padding: 10%;
 }
 
 li a{
