--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ button{
 #spotlight{
 
     color: darkslategrey;
+    height: 200px;
 }
 
 #foot{
@@ -173,6 +174,11 @@ button{
     color: white;
     height: 200px;
     padding: 50px;
+}
+
+#footernav{
+
+    text-align: left;
 }
 
 li a{
