--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ button{
     height: 300px;
     flex: auto;
     flex-direction: row;
+    justify-content: space-around;
 
 
 }
@@ -171,6 +172,7 @@ button{
 #img2{
 
     height: 150px;
+    border: 1px solid darkslategrey;
 }
 
 #foot{
