--- a/style.css
+++ b/style.css
@@ -166,7 +166,11 @@ button{
 }
 
 main{
-    flex: auto;
+    max-width: 1500px;
+    margin-right: auto;
+    margin-left: auto;
+    height: 00px;
+    display: flex;
     flex-direction: row;
     justify-content: space-around;
 
