--- a/style.css
+++ b/style.css
@@ -162,10 +162,22 @@ button{
 
     color: darkslategrey;
     height: 400px;
+
+}
+
+main{
     max-width: 1500px;
+    margin-right: auto;
+    margin-left: auto;
+    height:350px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+
+
+}
+.container2{
+    background-color: #ff0006;
 
 
 }
