--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ button{
 main{
     max-width: 1500px;
     margin-right: auto;
-    margin-left: 20px;
+    margin-left: auto;
     height:600px;
     display: flex;
     flex-direction: row;
@@ -214,7 +214,7 @@ main{
     font-family: 'Roboto', sans-serif;
     color: #666699;
     font-size: 25px;
-    margin-left: 20px;
+    padding: 20px;
 
 
 }
