--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ main{
     justify-content: space-around;
     font-family: 'Roboto', sans-serif;
     color: darkslategrey;
+    border: 2px solid black;
 
 }
 
