--- a/style.css
+++ b/style.css
@@ -214,7 +214,12 @@ main{
     color: #666699;
     font-size: 25px;
     margin-top: 0;
+
+}
+
+.container3{
     background-color: #FFCCFF;
+
 }
 
 #foot{
