--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ main{
 
 #featured{
     font-family: 'Roboto', sans-serif;
-    color: #666699;
+    color: darkslategrey;
     font-size: 25px;
     margin-top: 0;
 
