--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ main{
     justify-content: space-around;
     font-family: 'Roboto', sans-serif;
     color: darkslategrey;
-    background-color: #FFF8DC;
+    background-color: #dadada;
 }
 
 
@@ -214,7 +214,7 @@ main{
     color: darkslategrey;
     font-size: 25px;
     margin-top: 0;
-    background-color: #FFF8DC;
+
 
 }
 
