--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ main{
     justify-content: space-around;
     font-family: 'Roboto', sans-serif;
     color: darkslategrey;
-    background-color: lightgreen;
+    background-color: #666666;
     padding-top: 20px;
 }
 
@@ -211,8 +211,7 @@ main{
 }
 
 #featured{
-    font-family: 'Roboto', sans-serif;
-    font-size: 30px;
+
     margin-top: 0;
 
 
@@ -221,7 +220,9 @@ main{
 .centre{
 
     text-align: center;
-    color: olivedrab;
+    color: #666666;
+    font-family: 'Roboto', sans-serif;
+    font-size: 30px;
 }
 
 #img3{
