--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ main{
     justify-content: space-around;
     font-family: 'Roboto', sans-serif;
     color: darkslategrey;
-    background-color: #CCFFFF;
+    background-color: #FFDEAD;
     padding-top: 20px;
 }
 
