--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ main{
     justify-content: space-around;
     font-family: 'Roboto', sans-serif;
     color: darkslategrey;
-    background-color: #CCFF99;
+    background-color: #99CC33;
     padding-top: 20px;
 }
 
