--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ main{
 .centre{
 
     text-align: center;
-    color: #99CC33;
+    color: royalblue;
     font-family: 'Roboto', sans-serif;
     font-size: 30px;
 }
