--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ main{
 .centre{
 
     text-align: center;
-    color: royalblue;
+    color: orange;
     font-family: 'Roboto', sans-serif;
     font-size: 30px;
 }
