--- a/style.css
+++ b/style.css
@@ -195,8 +195,8 @@ main{
     justify-content: space-around;
     font-family: 'Roboto', sans-serif;
     color: darkslategrey;
-    background-color: lightgray;
-    padding-top: 20px;
+    background-color: snow;
+    padding-top: 30px;
 }
 
 
